# spoons

./: README.md  pyproject.toml
spoons/: cli.py  main.py
spoons/templates/: index.html
