[tool.poetry]
name = "spoons"
version = "0.1.0"
description = ""
authors = ["bensteinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
spoons = 'spoons.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
