[tool.poetry]
name = "spoons"
version = "0.1.91"
description = ""
authors = ["bensteinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
waitress = "^2.1.2"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
spoons = 'spoons.main:cli'
waitress-serve = 'waitress.runner:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
